--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ nav ul li{
     position: absolute;
     /* top: 50%; */
     left: 50%;
+    right: 50%;
     transform: translate(-50%, -50%);
 }
 input{
