--- a/style.css
+++ b/style.css
@@ -34,15 +34,12 @@ nav ul li{
     margin-right: 20px;
 
 }
-.main{
-    position: absolute;
-    /* top: 50%; */
-    left: 50%;
-    right: 50%;
-    transform: translate(-50%, -50%);
-}
-input{
 
+input{
+    border: 3px solid #4442;
+    height: 40px;
+    width: 300px;
+    border-radius: 50px;
 }
 a{
     text-decoration: none;
